<resources>
    <string name="app_name">SmartButler</string>
    <string name="text_butler_service">服务管家</string>
    <string name="text_wechat">微信精选</string>
    <string name="text_girl">美女社区</string>
    <string name="text_user_info">个人中心</string>
    <string name="setting">设置</string>
    <string name="account">账号</string>
    <string name="password">密码</string>
    <string name="remberPass">记住密码</string>
    <string name="forgetPass">忘记密码</string>
    <string name="register">注册</string>
    <string name="login">登录</string>
    <string name="user_name">用户名</string>
    <string name="age">年龄</string>
    <string name="desc">简介</string>
    <string name="boy">男</string>
    <string name="girl">女</string>
    <string name="password_again">确认密码</string>
    <string name="email">邮箱</string>
    <string name="register_remind">注册成功需要登录邮箱验证，否则无法登录</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_nothing">这个人很懒，什么都没留下</string>
    <string name="text_editor_password">修改密码</string>
    <string name="text_now_password">当前密码</string>
    <string name="text_new_password">新密码</string>
    <string name="text_password_again">再次输入新密码</string>
    <string name="text_forget_password">忘记密码</string>
    <string name="text_email">邮箱地址</string>
    <string name="now_login">正在登录</string>
    <string name="courier_company">快递公司</string>
    <string name="courier_number">快递单号</string>
    <string name="input_phone">电话号码</string>
    <string name="query">查询</string>
    <string name="send">发送</string>
    <string name="input">输入</string>

    <string name="text_setting_title_1">语音播报</string>
    <string name="text_setting_title_2">智能短信提醒</string>
    <string name="text_setting_title_3">检测版本</string>
    <string name="text_setting_title_4">扫一扫</string>
    <string name="text_setting_title_5">二维码分享</string>
    <string name="text_setting_title_6">我的位置</string>
    <string name="text_setting_title_7">关于软件</string>
    <string name="text_setting_content_1">开启之后与服务管家对讲语音播报</string>
    <string name="text_setting_content_2">开启之后收到短信将弹框提示</string>
    <string name="text_setting_content_3">检查是否有新版本提示下载</string>
    <string name="text_setting_content_4">扫描二维码或者条形码</string>
    <string name="text_setting_content_5">把自己分享给朋友吧</string>
    <string name="text_setting_content_6">时刻掌握自身位置</string>
    <string name="text_setting_content_7">devshare.cn</string>
    <string name="text_now_login">正在登陆...</string>
    <string name="text_test_version">"检测版本: "</string>

</resources>
