<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <ImageView
        android:id="@+id/head_iv"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:src="@drawable/icon_head"
        android:layout_marginBottom="30dp"/>

    <EditText
        android:id="@+id/account_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/account"
        android:background="@drawable/edit_top_bg"/>
    <EditText
        android:id="@+id/passwrod_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="numberPassword"
        android:background="@drawable/edit_bottom_bg"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:orientation="vertical">
        <CheckBox
            android:id="@+id/remepass_cb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remberPass"
            android:layout_gravity="right"
            android:textColor="@color/colorAccent"
            />
    </LinearLayout>

    <Button
        android:id="@+id/login_bt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textColor="@android:color/white"
        android:background="@drawable/button_bg"
        android:layout_marginTop="10dp"/>

    <Button
        android:id="@+id/regiser_bt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textColor="@android:color/white"
        android:background="@drawable/button_bg"
        android:layout_marginTop="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:orientation="vertical">
        <TextView
            android:id="@+id/forgetpass_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgetPass"
            android:layout_gravity="right"
            android:textColor="@color/colorAccent"/>
    </LinearLayout>

</LinearLayout>